integration_tests/codegen_fail/fail/scalar_value/not_enum.stderr
error: GraphQL built-in scalars can only be derived for enums
 --> fail/scalar_value/not_enum.rs:2:1
  |
2 | struct ScalarValue;
  | ^^^^^^^^^^^^^^^^^^^
